<?xml version="1.0"?>
<package format="2">
  <name>rover_arm</name>
  <version>0.1.0</version>
  <description>Contains all the robotic arm related files of the WARR Exploration Rover</description>

  <maintainer email="exploration@warr.de">WARR Exploration</maintainer>


  <license>GPLv3</license>

  <url type="website">http://exploration.warr.de</url>

  <author email="markus.goegele@warr.de">Markus Gögele</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
  <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->

</package>
